# fred-nlp-query

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  VINTAGE_FEATURE_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt  vintage_demo.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: main.py  models.py  prompts.py
app/logic/: data_processing.py  data_retrieval.py  orchestrator.py  query_understanding.py
app/services/: fred_service.py
app/utils/: composite_tools.py  enhanced_tools.py  gpu_test.py  tools.py
app/visualization/: plot_service.py
docs/: result-workspace-redesign-spec.md
src/fred_query/: __init__.py  __main__.py  cli.py  config.py  errors.py
tests/: clarification_resolver_eval_cases.json  conftest.py  test_api.py  test_chart_service.py  test_clarification_resolver.py  test_clarification_resolver_eval_cases.py  test_cli.py  test_config.py  test_cross_section_service.py  test_eval_fixture_corpus.py  test_execution_planner.py  test_follow_up_intent_merger.py  test_follow_up_suggestions.py  test_fred_client.py  test_natural_language_query_service.py  test_openai_parser_service.py  test_query_router.py  test_relationship_service.py  test_resolver_fixtures.py  test_resolver_service.py  test_router_fixtures.py  test_series_operators.py  test_single_series_service.py  test_state_gdp_comparison.py  test_transform_helpers.py  test_transform_service.py  test_vintage_analysis.py
tests/evals/: clarification_resolver_cases.json  clarification_trigger_cases.json  intent_cases.json  intent_eval_harness.py  (+6 more)
(+62 files in other folders)
