[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fred-query"
version = "0.1.0"
description = "Typed FRED analysis engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1.0",
    "openai>=1.99,<2.0",
    "pydantic>=2.10,<3.0",
]

[project.scripts]
fred-query = "fred_query.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
